Release v0.3.0 with global security policies
